# DitherToMo

./: .gitignore  .kdev_include_paths  CMakeLists.bak  CMakeLists.txt  ColorStuff.cpp  ColorStuff.h  DTM.kdev4  DTM16.cpp  DTM1677.cpp  DTM40.cpp  DitherToMo.kdev4  ErrorDiffusionDither.cpp  ErrorDiffusionDither.h  Floppy.cpp  Floppy.h  Huffman.cpp  Huffman.h  KMean.cpp  KMean.h  Lz77.cpp  Lz77.h  MapC16.cpp  MapC1677.cpp  README.md  Structs.h  ThomsonStuff.cpp  ThomsonStuff.h  _floyddither.h  compile_flags.txt  lz77.h  main.cpp  nimoy0177.h
sap2/: libsap.c  makefile.lnx
thomson/: Makefile  TINYTYPE.h  array.h  arton400.167  arton500.167  beast000.167  compile_flags.txt  dcmoto.ini  floppy.sap  fouAPi00.167  loader.c  loader.s  lz77dec.c  lz77dec.h  lz77dec.s  moby-d00.167  sapfs  tofloppy.c  tofloppy.h  tofloppy.s
